[gd_scene load_steps=25 format=2]

[ext_resource path="res://src/Effects/Textures/small_smoke.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Bosses/SecretBoss1/Windball.gd" type="Script" id=2]
[ext_resource path="res://src/Effects/Textures/windball.png" type="Texture" id=3]
[ext_resource path="res://src/Actors/Bosses/SecretBoss1/WindProjectile.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Effects/Textures/windtornado.png" type="Texture" id=5]
[ext_resource path="res://src/Actors/NewStateMachine/audioplayer.gd" type="Script" id=6]
[ext_resource path="res://src/Sounds/Rooster - Land.ogg" type="AudioStream" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 40, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 120, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 40, 40, 40 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 40, 40, 40, 40 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 80, 40, 40, 40 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 120, 40, 40, 40 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 24.0
} ]

[sub_resource type="CanvasItemMaterial" id=10]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 2
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=11]
lifetime_randomness = 0.79
emission_shape = 2
emission_box_extents = Vector3( 8, 8, 1 )
flag_disable_z = true
spread = 0.0
initial_velocity = 200.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 300.0
damping_random = 1.0
color = Color( 0.976471, 0.666667, 1, 1 )
anim_speed = 1.0

[sub_resource type="ParticlesMaterial" id=12]
lifetime_randomness = 0.79
emission_shape = 2
emission_box_extents = Vector3( 8, 8, 1 )
flag_disable_z = true
spread = 0.0
initial_velocity = -200.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 300.0
damping_random = 1.0
color = Color( 0.976471, 0.666667, 1, 1 )
anim_speed = 1.0

[sub_resource type="CanvasItemMaterial" id=13]
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="Gradient" id=14]
offsets = PoolRealArray( 0.590909, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=15]
gradient = SubResource( 14 )

[sub_resource type="ParticlesMaterial" id=18]
lifetime_randomness = 0.26
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 250.0
color_ramp = SubResource( 15 )
anim_speed = 4.0
anim_speed_random = 0.1
anim_offset = 1.0
anim_offset_random = 1.0

[sub_resource type="RectangleShape2D" id=17]

[node name="Windball" type="Node2D"]
position = Vector2( 206, 116 )
script = ExtResource( 2 )
windshot = ExtResource( 4 )

[node name="animatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
frame = 3
playing = true

[node name="particles2D3" type="Particles2D" parent="."]
material = SubResource( 10 )
z_index = -1
emitting = false
amount = 16
lifetime = 0.4
visibility_rect = Rect2( -5000, -50, 10000, 111 )
local_coords = false
process_material = SubResource( 11 )
texture = ExtResource( 1 )

[node name="particles2D4" type="Particles2D" parent="."]
material = SubResource( 10 )
z_index = -1
emitting = false
amount = 16
lifetime = 0.4
visibility_rect = Rect2( -5000, -50, 10000, 111 )
local_coords = false
process_material = SubResource( 12 )
texture = ExtResource( 1 )

[node name="start" type="Particles2D" parent="."]
modulate = Color( 0.976471, 0.666667, 1, 1 )
material = SubResource( 13 )
position = Vector2( 0, 4 )
rotation = 1.5708
emitting = false
amount = 1
lifetime = 0.4
one_shot = true
visibility_rect = Rect2( -5000, -50, 10000, 111 )
process_material = SubResource( 18 )
texture = ExtResource( 5 )

[node name="area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 10

[node name="collisionShape2D" type="CollisionShape2D" parent="area2D"]
shape = SubResource( 17 )

[node name="punch" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -5.0
max_distance = 600.0
bus = "SFX"
script = ExtResource( 6 )

[connection signal="body_entered" from="area2D" to="." method="_on_area2D_body_entered"]
